# one_num_type

./: .gitignore  README.md  R_compute.v  R_nat_ind.v  R_subsets.v  _CoqProject  add_ring_attempt.v  automation.v  dune-project  extensional_replace.v  fib.v  fib_for_students.v  intro_trigo.v  nat_sumn_eq.v  rec_def.v  rec_def_examples.v  tester.v
binomial/: binomial_exp.v
documents/: .gitignore  Bonn_2024_talk.tex  notes_viete.tex
documents/LiberAbaciTalk/: LiberAbaciApril26.tex  LiberAbaciOct24.tex  eindhoven25.tex
documents/deep_field_rocqshop/: main.tex
documents/integer-loops/: example.v  main.tex
documents/jfla_submission/: bib.bib  jfla25.tex  jflart.bib  jflatalk.tex  modjflart.cls
documents/under_binders_short/: main.tex
gcd_dir/: dune
srcElpi/: automation.elpi  compute.elpi  dune  gen.elpi  recursive.elpi  tools.elpi  translate_prf.elpi
theories/: R_compute.v  R_nat_ind.v  automation.v  dune  extensional_replace.v  fib.v  fib_for_students.v  field_simplify_bank.v  intro_trigo.v  nat_sumn_eq.v  rec_def.v  rec_def_examples.v  ring_simplify_bank.v
