(rocq.theory
 (name OneNum)
 (theories elpi_elpi elpi Stdlib srcElpi Coquelicot mathcomp Ltac2 HB)
 (plugins OneNum.gcd_plugin)
 (package OneNum))

(include_subdirs qualified)

(rule
 (target dummy.v)
 (deps
  (glob_files *.elpi))
 (action
  (with-stdout-to %{target}
   (progn
     (run rocq_elpi_shafile %{deps})))))